--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
 		"*.embeddedhtml": "html",
 		"iostream": "cpp",
 		"chrono": "cpp",
-		"limits": "cpp"
+		"limits": "cpp",
+		"thread": "cpp"
 	}
 }
